--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ProfileSettingActivity"></activity>
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".MypageTraineeActivity" />
+        <activity android:name=".MypageTrainerActivity" />
+        <activity android:name=".SearchTraineeActivity" />
+        <activity android:name=".ui.login.SearchTrainerActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".RegisterActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
@@ -18,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
