--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileSettingActivity"></activity>
+        <activity android:name=".ProfileSetActivity"/>
         <activity android:name=".ChatActivity" />
         <activity android:name=".MypageTraineeActivity" />
         <activity android:name=".MypageTrainerActivity" />
